<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OBJ viewer</string>
    <string name="action_settings">Settings</string>
    
    <string name="about_url">"file:///android_asset/about.html"</string>
    
    <string name="tip">Swipe from the left of the screen to see the menu</string>

    <string name="menu_open">Load model</string>
    <string name="menu_snap">Screenshot</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_draw_vertices">Vertizes</string>
    <string name="menu_draw_edges">Edges</string>
    <string name="menu_draw_faces">Faces</string>
    <string name="menu_draw_background">Background</string>
    <string name="menu_color_vertices">Vertex color</string>
    <string name="menu_color_edges">Edge color</string>
    <string name="menu_color_faces">Face color</string>
    <string name="menu_color_background">Background color</string>
    <string name="menu_alpha">Face opacity</string>
    <string name="menu_size_vertices">Vertex size</string>
    <string name="menu_size_edges">Edges size</string>
    <string name="menu_use_material">Use material</string>
    
    <string name="explorer_header">obj files</string>
    <string name="explorer_reload">Reload</string>
    <string name="explorer_back">Back</string>
    <string name="explorer_file_singular">file</string>
    <string name="explorer_file_plural">files</string>
    <string name="explorer_mtl">.mtl</string>
    <string name="explorer_details_mtl">%1$s bytes, %2$s vertices, %3$s faces, %4$s materials.</string>
    <string name="explorer_details_nomtl">%1$s bytes, %2$s vertices, %3$s faces.</string>
    <string name="explorer_examples_folder">Examples</string>
    <string name="explorer_examples_desciption">Examples provided with the app</string>
    
    <string name="example_0">ObjViewer Logo</string>
    <string name="example_1">Cube</string>
    <string name="example_2">Sphere</string>
    <string name="example_3">Star</string>
    <string name="example_4">Suzzane</string>
    <string name="example_5">Bolt</string>
    <string name="example_6">Multiple objects</string>
    
    <string name="toast_file_saved">File saved: </string>
    <string name="toast_file_error">Unable to save image</string>
    
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    
    <string name="control_select">Select</string>
    <string name="control_discard">Discard</string>
    
    <string name="preferences_category_elements">Default elements to display</string>
    <string name="preferences_item_draw_faces">Faces</string>
    <string name="preferences_item_draw_faces_on">Show faces by default</string>
    <string name="preferences_item_draw_faces_off">Don\'t show faces by default</string>
    <string name="preferences_item_draw_edges">Edges</string>
    <string name="preferences_item_draw_edges_on">Show edges by default</string>
    <string name="preferences_item_draw_edges_off">Don\'t show edges by default</string>
    <string name="preferences_item_draw_vertices">Vertices</string>
    <string name="preferences_item_draw_vertices_on">Show vertices by default</string>
    <string name="preferences_item_draw_vertices_off">Don\'t show vertices by default</string>
    <string name="preferences_item_draw_background">Background</string>
    <string name="preferences_item_draw_background_on">Show background by default</string>
    <string name="preferences_item_draw_background_off">Don\'t show background by default</string>
    <string name="preferences_category_colors">Default colors</string>
    <string name="preferences_item_color_faces">Face color</string>
    <string name="preferences_item_color_edges">Edge color</string>
    <string name="preferences_item_color_vertices">Vertex color</string>
    <string name="preferences_item_color_background">Background color</string>
    <string name="preferences_category_sizes">Default sizes</string>
    <string name="preferences_item_size_vertices">Vertex radius</string>
    <string name="preferences_item_size_edges">Edge width</string>
    <string name="preferences_category_alpha">Model transparency</string>
    <string name="preferences_item_alpha">Opacity</string>
    <string name="preferences_category_material">Material</string>
    <string name="preferences_item_material">Use material by default</string>
    <string name="preferences_item_material_on">Link material in mtl file</string>
    <string name="preferences_item_material_off">Don\'t link material in mtl file</string>
    <string name="preferences_category_scale">Scale model on load</string>
    <string name="preferences_item_scale">Scale model</string>
    <string name="preferences_item_scale_on">Scale model to fit window</string>
    <string name="preferences_item_scale_off">Show model\'s original size</string>
    
</resources>
