<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginBottom="40dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="40dp"
    android:minWidth="250dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/color_red" />

    <SeekBar
        android:id="@+id/sbColorRed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:max="255" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/color_green" />

    <SeekBar
        android:id="@+id/sbColorGreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:max="255" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/color_blue" />

    <SeekBar
        android:id="@+id/sbColorBlue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:max="255"
        android:minWidth="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/ivColorPreview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/black"
            android:importantForAccessibility="no"
            android:padding="1dp"
            android:src="@drawable/square" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btColorSelect"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:text="@string/control_select" />

            <Button
                android:id="@+id/btColorDiscard"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:text="@string/control_discard" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
