<com.seavenois.obj.MainLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
    <!-- Slider menu -->

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_menu"
            android:orientation="vertical" >
            
            <Button
                android:id="@+id/btLoadModel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/menu_open" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="@color/dark_gray"/>
            
            <Button
                android:id="@+id/btScreenshot"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/menu_snap" />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="@color/dark_gray"/>
            
            <CheckBox
                android:id="@+id/cbDrawBackground"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:checked="true"
                android:text="@string/menu_draw_background" />

            <LinearLayout
                android:id="@+id/llBackgroundPreferences"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvBackgroundColor"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/menu_color_background" />

            </LinearLayout>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="@color/dark_gray"/>          
            
            <CheckBox
                android:id="@+id/cbDrawVertices"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:checked="true"
                android:text="@string/menu_draw_vertices" />

            <LinearLayout
                android:id="@+id/llVertexPreferences"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="bottom"
                    android:text="@string/menu_size_vertices"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <SeekBar
                    android:id="@+id/sbVertexSize"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_gravity="top"
                    android:max="15" />

                <TextView
                    android:id="@+id/tvVertexColor"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/menu_color_vertices" />

            </LinearLayout>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="@color/dark_gray"/>
            
            <CheckBox
                android:id="@+id/cbDrawEdges"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:checked="true"
                android:text="@string/menu_draw_edges" />

            <LinearLayout
                android:id="@+id/llEdgePreferences"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="bottom"
                    android:text="@string/menu_size_edges"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <SeekBar
                    android:id="@+id/sbEdgeSize"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_gravity="top"
                    android:max="8" />

                <TextView
                    android:id="@+id/tvEdgeColor"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/menu_color_edges" />

            </LinearLayout>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="@color/dark_gray"/>
            
            <CheckBox
                android:id="@+id/cbDrawFaces"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:checked="true"
                android:text="@string/menu_draw_faces" />

            <LinearLayout
                android:id="@+id/llFacePreferences"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical" >
                
                <CheckBox
	                android:id="@+id/cbUseMaterial"
	                android:layout_width="fill_parent"
	                android:layout_height="60dp"
	                android:layout_gravity="center_vertical"
	                android:checked="true"
	                android:text="@string/menu_use_material" />

                <TextView
                    android:id="@+id/tvFaceColor"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/menu_color_faces"
                    android:visibility="gone" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="bottom"
                    android:text="@string/menu_alpha"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <SeekBar
                    android:id="@+id/sbAlpha"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_gravity="top"
                    android:max="255"
                    android:progress="120" />

            </LinearLayout>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="@color/dark_gray"/>
            
            <Button
                android:id="@+id/btSettings"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/menu_settings" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="@color/dark_gray"/>
            
            <Button
                android:id="@+id/btAbout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/menu_about" />
            
        </LinearLayout>

    </ScrollView>

	<!-- The visible screen -->

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<ImageView
		    android:id="@+id/ivCanvas"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:background="@color/black"
		    android:importantForAccessibility="no" />
		
	</LinearLayout>

</com.seavenois.obj.MainLayout>
